@@ -1,3 +1,12 @@
+Tue Nov 24 07:50:15 2015  Eric Wong  <e@80x24.org>
+
+	* dir.c (dir_initialize): use rb_gc_for_fd for ENOMEM
+	* ext/socket/init.c (rsock_socket): ditto
+	* ext/socket/socket.c (rsock_socketpair): ditto
+	* internal.h (rb_gc_for_fd): prototype
+	* io.c (rb_gc_for_fd): remove static
+	  [ruby-core:71623] [Feature #11727]
+
 Tue Nov 24 06:46:27 2015  Eric Wong  <e@80x24.org>
 
 	* io.c (rb_gc_for_fd): new helper function
